дабавлена сраница для поиска заявок волонтера и добавлены все страницы для нуждающегося аналогично волонтерам