@@ -6,20 +6,18 @@ import com.example.project.form.help.entity.HelpEntity;
 import com.example.project.form.help.repository.HelpRepository;
 import com.example.project.form.help.request.CreateHelpRequest;
 import com.example.project.form.help.request.EditHelpRequest;
-import com.example.project.form.help.response.HelpResponse;
 import com.example.project.form.help.routes.HelpRoutes;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Example;
 import org.springframework.data.domain.ExampleMatcher;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Controller
 @RequestMapping()
@@ -39,19 +37,20 @@ public class HelpApiController {
     public String successfulCreate() {
         return "/form/successfulCreate";
     }
+
     @GetMapping(HelpRoutes.CREATE)
     public String createForm() {
-        return "/form/helpForm";  // Имя файла index.html, без расширения .html
+        return "/form/helpCreateForm";  // Имя файла index.html, без расширения .html
     }
 
     @GetMapping(HelpRoutes.EDIT)
-    public String editForm(@PathVariable Long id) {
-
-        return "/form/helpEditForm";  // Имя файла index.html, без расширения .html
+    public String edit(@PathVariable Long id, Model model) throws FormNotFoundException {
+        HelpEntity help = helpRepository.findById(id).orElseThrow(FormNotFoundException::new);//ищем по id заявку
+        model.addAttribute("help", help);
+        return "/form/helpEditForm";
     }
-
-    @PutMapping(HelpRoutes.EDIT)
-    public HelpResponse edit(@PathVariable Long id, @RequestBody EditHelpRequest request) throws FormNotFoundException {
+    @PostMapping(HelpRoutes.EDIT)
+    public String edit(@PathVariable Long id, @ModelAttribute EditHelpRequest request) throws FormNotFoundException {
         HelpEntity help = helpRepository.findById(id).orElseThrow(FormNotFoundException::new);
 
         help.setFullName(request.getFullName());
@@ -67,14 +66,13 @@ public class HelpApiController {
 
 
         helpRepository.save(help);
-        return HelpResponse.of(help);
+        return "redirect:" + HelpRoutes.SUCCESSFUL;
     }
-
     @GetMapping(HelpRoutes.BY_ID)
-    public HelpResponse findById(@PathVariable Long id) throws FormNotFoundException {
+    public String findById(@PathVariable Long id, Model model) throws FormNotFoundException {
         HelpEntity help = helpRepository.findById(id).orElseThrow(FormNotFoundException::new);
-
-        return HelpResponse.of(help);
+        model.addAttribute("help", help);
+        return "/form/helpPersonForm";
     }
 
     @DeleteMapping(HelpRoutes.BY_ID)
@@ -87,67 +85,65 @@ public class HelpApiController {
 
 
     @GetMapping(HelpRoutes.SEARCH)
-    public List<HelpResponse> search(
+    public String search(
             @RequestParam(defaultValue = "") String query,
             @RequestParam(defaultValue = "") String city,
             @RequestParam(defaultValue = "") String personCondition,
             @RequestParam(defaultValue = "") String availability,
             @RequestParam(defaultValue = "") String helpGroup,
             @RequestParam(defaultValue = "") String helpNeeded,
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "10") int size) {
+            //@RequestParam(defaultValue = "0") int page,
+            //@RequestParam(defaultValue = "10") int size)
+            Model model) {
 
-        Pageable pageable = PageRequest.of(page, size);
+        //Pageable pageable = PageRequest.of(page, size);
+        ExampleMatcher exampleMatcher = ExampleMatcher.matchingAll()
+                .withMatcher("city", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
+                .withMatcher("personCondition", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
+                .withMatcher("availability", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
+                .withMatcher("helpGroup", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
+                .withMatcher("helpNeeded", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase());
 
+        HelpEntity helpEntity = HelpEntity.builder()
+                .city(city.isEmpty() ? null : city) // если не передан город, не заполняем поле
+                .personCondition(personCondition.isEmpty() ? null : personCondition)
+                .availability(availability.isEmpty() ? null : availability)
+                .helpGroup(helpGroup.isEmpty() ? null : helpGroup)
+                .helpNeeded(helpNeeded.isEmpty() ? null : helpNeeded)
+                .build();
 
+        List<HelpEntity> helps =
+                helpRepository.findAll(Example.of(helpEntity, exampleMatcher));
 
-        if(!query.isEmpty()) {
-            System.out.println(query);
-            ExampleMatcher exampleMatcher = ExampleMatcher.matchingAny()
-                    .withMatcher("city", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("personCondition", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("availability", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("helpGroup", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("helpNeeded", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase());
+        // 2) Если query заполнен — фильтруем дополнительно вручную
+        if (!query.isEmpty()) {
+            String q = query.toLowerCase();
 
-            HelpEntity helpEntity= HelpEntity.builder()
-                    .city(query) // если не передан город, не заполняем поле
-                    .personCondition(query)
-                    .availability(query)
-                    .helpGroup(query)
-                    .helpNeeded(query)
-                    .build();
-            Example<HelpEntity> example = Example.of(helpEntity, exampleMatcher);
-            return helpRepository
-                    .findAll(example, pageable)
-                    .stream()
-                    .map(HelpResponse::of)
-                    .collect(Collectors.toList());
+            helps = helps.stream()
+                    .filter(v ->
+                            (v.getCity() != null && v.getCity().toLowerCase().contains(q)) ||
+                                    (v.getPersonCondition() != null && v.getPersonCondition().toLowerCase().contains(q)) ||
+                                    (v.getAvailability() != null && v.getAvailability().toLowerCase().contains(q)) ||
+                                    (v.getHelpGroup() != null && v.getHelpGroup().toLowerCase().contains(q)) ||
+                                    (v.getHelpNeeded() != null && v.getHelpNeeded().toLowerCase().contains(q))
+                    )
+                    .toList();
         }
-        else {
-            ExampleMatcher exampleMatcher = ExampleMatcher.matchingAll()
-                    .withMatcher("city", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("personCondition", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("availability", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("helpGroup", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase())
-                    .withMatcher("helpNeeded", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase());
 
-            HelpEntity helpEntity = HelpEntity.builder()
-                    .city(city.isEmpty() ? null : city) // если не передан город, не заполняем поле
-                    .personCondition(personCondition.isEmpty() ? null : personCondition)
-                    .availability(availability.isEmpty() ? null : availability)
-                    .helpGroup(helpGroup.isEmpty() ? null : helpGroup)
-                    .helpNeeded(helpNeeded.isEmpty() ? null : helpNeeded)
-                    .build();
-            Example<HelpEntity> example = Example.of(helpEntity, exampleMatcher);
-            return helpRepository
-                    .findAll(example, pageable)
-                    .stream()
-                    .map(HelpResponse::of)
-                    .collect(Collectors.toList());
-        }
+        //  Передаём список в HTML
+        model.addAttribute("helps", helps);
+
+        //  Чтобы query и остальные оставались в поле поиска
+        model.addAttribute("query", query);
+        model.addAttribute("city", city);
+        model.addAttribute("personCondition", personCondition);
+        model.addAttribute("availability", availability);
+        model.addAttribute("helpGroup", helpGroup);
+        model.addAttribute("helpNeeded", helpNeeded);
+
+        return "/form/helpForms";
 
 
     }
+    }
 
-}
